fixed content alignment on recipes page

--- a/client/src/styles/Recipe.scss
+++ b/client/src/styles/Recipe.scss
@@ -1,3 +1,9 @@
+.hero.is-fullheight-with-navbar {
+  .recipe-list {
+    align-items: flex-start;
+  }
+}
+
 .image.is-16by9 img {
   object-fit: cover;
 }
